# elektroid

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: fedora.yml
cmake/: config.h.cmake
docs/: installation.md
man/: CMakeLists.txt
po/: CMakeLists.txt
res/: CMakeLists.txt
src/: CMakeLists.txt  audio.c  audio_pa.c  backend.c  backend_rtmidi.c  browser.c  connector.h  editor.c  elektroid-cli.c  elektroid.c  name_window.c  preferences.c  progress_window.c  utils.c  utils.h
src/connectors/: efactor.c  elektron.c  logue.c  microfreak.c  padkontrol.c  sds.c  summit.c  volca_sample.c  volca_sample_2.c
src/mactions/: autosampler.c  backend.c  microbrute.c
test/: CMakeLists.txt
